--- a/cachelab/Makefile
+++ b/cachelab/Makefile
@@ -5,7 +5,16 @@ LIBS:=-lm
 all: cachesim
 
 run:
-	cargo run trazas/blowfish.xex 2048 4 8
+	cargo run trazas/blowfish.xex 1024 2 32
+
+build:
+	cargo build
+
+debug: build
+	rust-gdb --args target/debug/cachelab trazas/blowfish.xex 1024 2 32
+
+debug_llbm: build
+	rust-lldb target/debug/cachelab trazas/blowfish.xex 1024 2 32
 
 cachesim:
 	cargo build --release
